--- a/src/MentorSync.SharedKernel/MentorSync.SharedKernel.csproj
+++ b/src/MentorSync.SharedKernel/MentorSync.SharedKernel.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Ardalis.Result" Version="10.1.0" />
+      <PackageReference Include="FastEndpoints" Version="5.33.0" />
+    </ItemGroup>
+
 </Project>
