--- a/src/MentorSync.API/MentorSync.API.csproj
+++ b/src/MentorSync.API/MentorSync.API.csproj
@@ -8,4 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\aspire\MentorSync.ServiceDefaults\MentorSync.ServiceDefaults.csproj" />
+  </ItemGroup>
 </Project>
