--- a/src/MentorSync.SharedKernel/MentorSync.SharedKernel.csproj
+++ b/src/MentorSync.SharedKernel/MentorSync.SharedKernel.csproj
@@ -6,6 +6,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Ardalis.Result" Version="10.1.0" />
-    <PackageReference Include="FastEndpoints" Version="5.33.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 </Project>
