added serilog sink for open telemetry
now logs can be seen in aspire dashboard

--- a/src/MentorSync.API/appsettings.json
+++ b/src/MentorSync.API/appsettings.json
@@ -5,6 +5,9 @@
     "WriteTo": [
       {
         "Name": "Console"
+      },
+      {
+        "Name": "OpenTelemetry"
       }
     ],
     "Properties": {
