completed JWT auth
login & refresh token

--- a/src/MentorSync.API/appsettings.json
+++ b/src/MentorSync.API/appsettings.json
@@ -14,5 +14,12 @@
       "ApplicationName": "MentorSync API"
     }
   },
+  "Jwt": {
+    "Issuer": "https://mentor-sync",
+    "Audience": "https://localhost",
+    "SecretKey": "your-super-secret-key-with-at-least-256-bits-length",
+    "TokenExpirationInMinutes": 60,
+    "RefreshTokenExpirationInDays": 7
+  },
   "AllowedHosts": "*"
 }
