--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -66,6 +66,10 @@ jobs:
           SOLUTION_NAME=$(ls *.sln | sed 's/\.sln$//')
           echo "Solution Name: $SOLUTION_NAME"
           echo "SOLUTION_NAME=$SOLUTION_NAME" >> $GITHUB_ENV
+   
+      - name: Check env variables
+        run: |
+          echo "AZD_INITIAL_ENVIRONMENT_CONFIG=$AZD_INITIAL_ENVIRONMENT_CONFIG"
 
       - name: Provision Infrastructure
         run: azd provision --no-prompt
