--- a/src/MentorSync.API/appsettings.json
+++ b/src/MentorSync.API/appsettings.json
@@ -1,25 +1,34 @@
 {
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console" ],
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "OpenTelemetry"
-      }
-    ],
-    "Properties": {
-      "ApplicationName": "MentorSync API"
-    }
-  },
-  "Jwt": {
-    "Issuer": "https://mentor-sync",
-    "Audience": "https://localhost",
-    "SecretKey": "your-super-secret-key-with-at-least-256-bits-length",
-    "TokenExpirationInMinutes": 60,
-    "RefreshTokenExpirationInDays": 7
-  },
-  "AllowedHosts": "*"
+    "Serilog": {
+        "Using": ["Serilog.Sinks.Console"],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Information",
+                "OpenTelemetry": "Debug",
+                "Microsoft.AspNetCore.Mvc": "Warning",
+                "Microsoft.AspNetCore.Routing": "Warning",
+                "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console"
+            },
+            {
+                "Name": "OpenTelemetry"
+            }
+        ],
+        "Properties": {
+            "ApplicationName": "MentorSync API"
+        }
+    },
+    "Jwt": {
+        "Issuer": "https://mentor-sync",
+        "Audience": "https://localhost",
+        "SecretKey": "your-super-secret-key-with-at-least-256-bits-length",
+        "TokenExpirationInMinutes": 60,
+        "RefreshTokenExpirationInDays": 7
+    },
+    "AllowedHosts": "*"
 }
