--- a/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
+++ b/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
         <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.0.0" />
+        <PackageReference Include="Aspire.Hosting.Elasticsearch" Version="9.0.0-preview.5.24551.3" />
     </ItemGroup>
 
     <ItemGroup>
