completed email sending via Azure CS
introduced domain events and their publishing via MediatR
used outbox pattern with MongoDB to ensure resilience
implemented sending of email to user with confirmation token

--- a/aspire/MentorSync.AppHost/infra/api.tmpl.yaml
+++ b/aspire/MentorSync.AppHost/infra/api.tmpl.yaml
@@ -22,7 +22,9 @@ properties:
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
     secrets:
       - name: connectionstrings--elasticsearch
-        value: http://elastic:{{ securedParameter "password_es" }}@elasticsearch.internal.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}:80
+        value: http://elastic:{{ securedParameter "elastic_password" }}@elasticsearch.internal.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}:80
+      - name: connectionstrings--mongodb
+        value: mongodb://{{ securedParameter "mongo_username" }}:{{ securedParameter "mongo_password" }}@mongo:27017/mongodb?authSource=admin&authMechanism=SCRAM-SHA-256
       - name: connectionstrings--emailservice
         keyVaultUrl: '{{ .Env.SERVICE_BINDING_KVA12EFD91_ENDPOINT }}secrets/cs-connectionString'
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
@@ -48,6 +50,8 @@ properties:
             value: in_memory
           - name: ConnectionStrings__elasticsearch
             secretRef: connectionstrings--elasticsearch
+          - name: ConnectionStrings__mongodb
+            secretRef: connectionstrings--mongodb
           - name: ConnectionStrings__EmailService
             secretRef: connectionstrings--emailservice
           - name: ConnectionStrings__MentorSyncDb
