--- a/src/MentorSync.API/appsettings.json
+++ b/src/MentorSync.API/appsettings.json
@@ -38,5 +38,9 @@
         "RedirectUri": "https://localhost:7005/GoogleOAuth/Tokens",
         "EmailScope": "https://www.googleapis.com/auth/userinfo.email"
     },
+    "MongoSettings": {
+        "Database": "mentorsync-outbox",
+        "Collection": "outboxMessages"
+    },
     "AllowedHosts": "*"
 }
