--- a/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
+++ b/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Aspire.Hosting.Azure" Version="9.0.0" />
         <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.0.0" />
         <PackageReference Include="Aspire.Hosting.Elasticsearch" Version="9.0.0-preview.5.24551.3" />
+        <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
