--- a/src/MentorSync.MigrationService/appsettings.json
+++ b/src/MentorSync.MigrationService/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+    "MongoSettings": {
+        "Database": "mentorsync-outbox",
+        "Collection": "outboxMessages"
+    }
 }
