--- a/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
+++ b/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
@@ -1,21 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
+    <Sdk Name="Aspire.AppHost.Sdk" Version="9.2.0" />
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <IsAspireHost>true</IsAspireHost>
         <UserSecretsId>dc0fc8e3-3a05-42e5-bc00-c18ccb8b4bd0</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.1.0" />
-        <PackageReference Include="Aspire.Hosting.Azure" Version="9.1.0" />
-        <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.0.0" />
-        <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.1.0" />
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.2.0" />
+        <PackageReference Include="Aspire.Hosting.Azure" Version="9.2.0" />
+        <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.2.0" />
+        <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.2.0" />
     </ItemGroup>
 
     <ItemGroup>
