cleaned up bicep infra
remove ELK and update PG module

--- a/aspire/MentorSync.AppHost/infra/migration-service.tmpl.yaml
+++ b/aspire/MentorSync.AppHost/infra/migration-service.tmpl.yaml
@@ -16,8 +16,10 @@ properties:
       - server: {{ .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT }}
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
     secrets:
+      - name: connectionstrings--mongodb
+        value: mongodb://{{ securedParameter "mongo_username" }}:{{ securedParameter "mongo_password" }}@mongo:27017/mongodb?authSource=admin&authMechanism=SCRAM-SHA-256
       - name: connectionstrings--mentorsyncdb
-        keyVaultUrl: '{{ .Env.SERVICE_BINDING_KV41F5937F_ENDPOINT }}secrets/MentorSyncDb-connectionString'
+        keyVaultUrl: '{{ .Env.POSTGRES_DB_KV_VAULTURI }}secrets/connectionstrings--MentorSyncDb'
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
   template:
     containers:
@@ -32,6 +34,8 @@ properties:
             value: "true"
           - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY
             value: in_memory
+          - name: ConnectionStrings__mongodb
+            secretRef: connectionstrings--mongodb
           - name: ConnectionStrings__MentorSyncDb
             secretRef: connectionstrings--mentorsyncdb
     scale:
