--- a/aspire/MentorSync.AppHost/infra/api.tmpl.yaml
+++ b/aspire/MentorSync.AppHost/infra/api.tmpl.yaml
@@ -21,15 +21,13 @@ properties:
       - server: {{ .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT }}
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
     secrets:
-      - name: connectionstrings--elasticsearch
-        value: http://elastic:{{ securedParameter "elastic_password" }}@elasticsearch.internal.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}:80
       - name: connectionstrings--mongodb
         value: mongodb://{{ securedParameter "mongo_username" }}:{{ securedParameter "mongo_password" }}@mongo:27017/mongodb?authSource=admin&authMechanism=SCRAM-SHA-256
       - name: connectionstrings--emailservice
         keyVaultUrl: '{{ .Env.SERVICE_BINDING_KVA12EFD91_ENDPOINT }}secrets/cs-connectionString'
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
       - name: connectionstrings--mentorsyncdb
-        keyVaultUrl: '{{ .Env.SERVICE_BINDING_KV41F5937F_ENDPOINT }}secrets/MentorSyncDb-connectionString'
+        keyVaultUrl: '{{ .Env.POSTGRES_DB_KV_VAULTURI }}secrets/connectionstrings--MentorSyncDb'
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
   template:
     containers:
@@ -48,8 +46,6 @@ properties:
             value: "true"
           - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY
             value: in_memory
-          - name: ConnectionStrings__elasticsearch
-            secretRef: connectionstrings--elasticsearch
           - name: ConnectionStrings__mongodb
             secretRef: connectionstrings--mongodb
           - name: ConnectionStrings__EmailService
