--- a/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
+++ b/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
@@ -11,7 +11,6 @@
         <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.2.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
         <PackageReference Include="OpenTelemetry.Api" Version="1.11.2" />
-        <PackageReference Include="MongoDB.Driver" Version="3.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
