--- a/aspire/MentorSync.AppHost/aspire-manifest.json
+++ b/aspire/MentorSync.AppHost/aspire-manifest.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://json.schemastore.org/aspire-8.0.json",
   "resources": {
-    "username": {
+    "postgre-username": {
       "type": "parameter.v0",
-      "value": "{username.inputs.value}",
+      "value": "{postgre-username.inputs.value}",
       "inputs": {
         "value": {
           "type": "string",
@@ -11,9 +11,9 @@
         }
       }
     },
-    "password": {
+    "postgre-password": {
       "type": "parameter.v0",
-      "value": "{password.inputs.value}",
+      "value": "{postgre-password.inputs.value}",
       "inputs": {
         "value": {
           "type": "string",
@@ -23,17 +23,91 @@
     },
     "postgres-db": {
       "type": "azure.bicep.v0",
-      "connectionString": "{postgres-db.secretOutputs.connectionString}",
+      "connectionString": "{postgres-db-kv.secrets.connectionstrings--postgres-db}",
       "path": "postgres-db.module.bicep",
       "params": {
-        "keyVaultName": "",
-        "administratorLogin": "{username.value}",
-        "administratorLoginPassword": "{password.value}"
+        "administratorLogin": "{postgre-username.value}",
+        "administratorLoginPassword": "{postgre-password.value}",
+        "keyVaultName": "{postgres-db-kv.outputs.name}"
       }
+    },
+    "postgres-db-kv": {
+      "type": "azure.bicep.v0",
+      "connectionString": "{postgres-db-kv.outputs.vaultUri}",
+      "path": "postgres-db-kv.module.bicep"
     },
     "MentorSyncDb": {
       "type": "value.v0",
-      "connectionString": "{postgres-db.secretOutputs.MentorSyncDb-connectionString}"
+      "connectionString": "{postgres-db-kv.secrets.connectionstrings--MentorSyncDb}"
+    },
+    "mongo-username": {
+      "type": "parameter.v0",
+      "value": "{mongo-username.inputs.value}",
+      "inputs": {
+        "value": {
+          "type": "string",
+          "secret": true
+        }
+      }
+    },
+    "mongo-password": {
+      "type": "parameter.v0",
+      "value": "{mongo-password.inputs.value}",
+      "inputs": {
+        "value": {
+          "type": "string",
+          "secret": true
+        }
+      }
+    },
+    "mongo": {
+      "type": "container.v0",
+      "connectionString": "mongodb://{mongo-username.value}:{mongo-password.value}@{mongo.bindings.tcp.host}:{mongo.bindings.tcp.port}?authSource=admin\u0026authMechanism=SCRAM-SHA-256",
+      "image": "docker.io/library/mongo:8.0",
+      "volumes": [
+        {
+          "name": "mongo-data",
+          "target": "/data/db",
+          "readOnly": false
+        }
+      ],
+      "env": {
+        "MONGO_INITDB_ROOT_USERNAME": "{mongo-username.value}",
+        "MONGO_INITDB_ROOT_PASSWORD": "{mongo-password.value}"
+      },
+      "bindings": {
+        "tcp": {
+          "scheme": "tcp",
+          "protocol": "tcp",
+          "transport": "tcp",
+          "targetPort": 27017
+        }
+      }
+    },
+    "mongodb": {
+      "type": "value.v0",
+      "connectionString": "mongodb://{mongo-username.value}:{mongo-password.value}@{mongo.bindings.tcp.host}:{mongo.bindings.tcp.port}/mongodb?authSource=admin\u0026authMechanism=SCRAM-SHA-256"
+    },
+    "communication-service": {
+      "type": "azure.bicep.v0",
+      "path": "../bicep-templates/communication-service.module.bicep",
+      "params": {
+        "isProd": false,
+        "communicationServiceName": "cs-mentorsync-dev",
+        "emailServiceName": "es-mentorsync-dev",
+        "keyVaultName": ""
+      }
+    },
+    "migration-service": {
+      "type": "project.v0",
+      "path": "../../src/MentorSync.MigrationService/MentorSync.MigrationService.csproj",
+      "env": {
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES": "true",
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES": "true",
+        "OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY": "in_memory",
+        "ConnectionStrings__MentorSyncDb": "{MentorSyncDb.connectionString}",
+        "ConnectionStrings__mongodb": "{mongodb.connectionString}"
+      }
     },
     "api": {
       "type": "project.v0",
@@ -44,7 +118,9 @@
         "OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY": "in_memory",
         "ASPNETCORE_FORWARDEDHEADERS_ENABLED": "true",
         "HTTP_PORTS": "{api.bindings.http.targetPort}",
-        "ConnectionStrings__MentorSyncDb": "{MentorSyncDb.connectionString}"
+        "ConnectionStrings__MentorSyncDb": "{MentorSyncDb.connectionString}",
+        "ConnectionStrings__mongodb": "{mongodb.connectionString}",
+        "ConnectionStrings__EmailService": "{communication-service.secretOutputs.cs-connectionString}"
       },
       "bindings": {
         "http": {
@@ -61,14 +137,13 @@
         }
       }
     },
-    "migration-service": {
-      "type": "project.v0",
-      "path": "../../src/MentorSync.MigrationService/MentorSync.MigrationService.csproj",
-      "env": {
-        "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES": "true",
-        "OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES": "true",
-        "OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY": "in_memory",
-        "ConnectionStrings__MentorSyncDb": "{MentorSyncDb.connectionString}"
+    "postgres-db-kv-roles": {
+      "type": "azure.bicep.v0",
+      "path": "postgres-db-kv-roles.module.bicep",
+      "params": {
+        "postgres_db_kv_outputs_name": "{postgres-db-kv.outputs.name}",
+        "principalType": "",
+        "principalId": ""
       }
     }
   }
