--- a/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
+++ b/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
@@ -15,6 +15,8 @@
         <PackageReference Include="Aspire.Hosting.Azure" Version="9.2.1" />
         <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.2.1" />
         <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.2.1" />
+        <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.2.1" />
+        <PackageReference Include="CommunityToolkit.Aspire.Hosting.NodeJS.Extensions" Version="9.4.0" />
     </ItemGroup>
 
     <ItemGroup>
