--- a/src/Modules/Users/MentorSync.Users.Contracts/MentorSync.Users.Contracts.csproj
+++ b/src/Modules/Users/MentorSync.Users.Contracts/MentorSync.Users.Contracts.csproj
@@ -3,4 +3,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" />
+  </ItemGroup>
 </Project>
