added base for materials module

--- a/src/MentorSync.API/MentorSync.API.csproj
+++ b/src/MentorSync.API/MentorSync.API.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\aspire\MentorSync.ServiceDefaults\MentorSync.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Modules\Materials\MentorSync.Materials\MentorSync.Materials.csproj" />
     <ProjectReference Include="..\Modules\Notifications\MentorSync.Notifications\MentorSync.Notifications.csproj" />
     <ProjectReference Include="..\Modules\Ratings\MentorSync.Ratings\MentorSync.Ratings.csproj" />
     <ProjectReference Include="..\Modules\Recommendations\MentorSync.Recommendations\MentorSync.Recommendations.csproj" />
