--- a/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
+++ b/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Aspire.Hosting.AppHost" Version="9.2.1" />
         <PackageReference Include="Aspire.Hosting.Azure" Version="9.2.1" />
         <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.2.1" />
+        <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.2.1" />
         <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.2.1" />
         <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.2.1" />
         <PackageReference Include="CommunityToolkit.Aspire.Hosting.NodeJS.Extensions" Version="9.4.0" />
