--- a/aspire/MentorSync.AppHost/infra/ui.tmpl.yaml
+++ b/aspire/MentorSync.AppHost/infra/ui.tmpl.yaml
@@ -12,30 +12,35 @@ properties:
     runtime:
       dotnet:
         autoConfigureDataProtection: true
+    ingress:
+      external: true
+      targetPort: 8000
+      transport: http
+      allowInsecure: false
     registries:
       - server: {{ .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT }}
-        identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
-    secrets:
-      - name: connectionstrings--mentorsyncdb
-        keyVaultUrl: '{{ .Env.POSTGRES_DB_KV_VAULTURI }}secrets/connectionstrings--MentorSyncDb'
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
   template:
     containers:
       - image: {{ .Image }}
-        name: migration-service
+        name: ui
         env:
           - name: AZURE_CLIENT_ID
             value: {{ .Env.MANAGED_IDENTITY_CLIENT_ID }}
-          - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES
-            value: "true"
-          - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES
-            value: "true"
-          - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY
-            value: in_memory
-          - name: ConnectionStrings__MentorSyncDb
-            secretRef: connectionstrings--mentorsyncdb
+          - name: BROWSER
+            value: none
+          - name: NODE_ENV
+            value: development
+          - name: VITE_API_URL
+            value: https://api.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}
+          - name: VITE_PORT
+            value: "8000"
+          - name: services__api__http__0
+            value: http://api.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}
+          - name: services__api__https__0
+            value: https://api.{{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_DEFAULT_DOMAIN }}
     scale:
       minReplicas: 1
 tags:
-  azd-service-name: migration-service
-  aspire-resource-name: migration-service
+  azd-service-name: ui
+  aspire-resource-name: ui
