--- a/.github/workflows/backend-build-and-test.yml
+++ b/.github/workflows/backend-build-and-test.yml
@@ -3,8 +3,10 @@ name: Backend - build & test
 on:
   push:
     branches: ["master"]
+    paths: ["!src/MentorSync.UI/**"]
   pull_request:
     branches: ["master"]
+    paths: ["!src/MentorSync.UI/**"]
 
 jobs:
   build:
