--- a/src/MentorSync.UI/package.json
+++ b/src/MentorSync.UI/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "@types/node": "^22.15.21",
+    "axios": "^1.9.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
