--- a/src/MentorSync.UI/package.json
+++ b/src/MentorSync.UI/package.json
@@ -11,9 +11,11 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.7",
+        "@types/marked": "^5.0.2",
         "@types/node": "^22.15.21",
         "axios": "^1.9.0",
         "jwt-decode": "^4.0.0",
+        "marked": "^15.0.12",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.56.4",
