changed approach to path ignore for BE workflow

--- a/.github/workflows/backend-build-and-test.yml
+++ b/.github/workflows/backend-build-and-test.yml
@@ -3,10 +3,10 @@ name: Backend - build & test
 on:
   push:
     branches: ["master"]
-    paths: ["!src/MentorSync.UI/**"]
+    paths-ignore: ["src/MentorSync.UI/**"]
   pull_request:
     branches: ["master"]
-    paths: ["!src/MentorSync.UI/**"]
+    paths-ignore: ["src/MentorSync.UI/**"]
 
 jobs:
   build:
