--- a/src/Modules/Ratings/MentorSync.Ratings/MentorSync.Ratings.csproj
+++ b/src/Modules/Ratings/MentorSync.Ratings/MentorSync.Ratings.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" />
     <ProjectReference Include="..\..\Users\MentorSync.Users.Contracts\MentorSync.Users.Contracts.csproj" />
+    <ProjectReference Include="..\MentorSync.Ratings.Contracts\MentorSync.Ratings.Contracts.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
