--- a/src/Modules/Recommendations/MentorSync.Recommendations/MentorSync.Recommendations.csproj
+++ b/src/Modules/Recommendations/MentorSync.Recommendations/MentorSync.Recommendations.csproj
@@ -4,6 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
     <PackageReference Include="Microsoft.ML.Recommender" Version="0.22.2" />
     <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.3.0" />
@@ -20,6 +21,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" />
+    <ProjectReference Include="..\..\Ratings\MentorSync.Ratings.Contracts\MentorSync.Ratings.Contracts.csproj" />
+    <ProjectReference Include="..\..\Scheduling\MentorSync.Scheduling.Contracts\MentorSync.Scheduling.Contracts.csproj" />
     <ProjectReference Include="..\..\Users\MentorSync.Users.Contracts\MentorSync.Users.Contracts.csproj" />
   </ItemGroup>
   <ItemGroup>
