--- a/src/Modules/Scheduling/MentorSync.Scheduling/MentorSync.Scheduling.csproj
+++ b/src/Modules/Scheduling/MentorSync.Scheduling/MentorSync.Scheduling.csproj
@@ -20,6 +20,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" />
     <ProjectReference Include="..\MentorSync.Scheduling.Contracts\MentorSync.Scheduling.Contracts.csproj" />
+    <ProjectReference Include="..\..\Users\MentorSync.Users.Contracts\MentorSync.Users.Contracts.csproj" />
+    <ProjectReference Include="..\..\Notifications\MentorSync.Notifications.Contracts\MentorSync.Notifications.Contracts.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
