fix up clean up

--- a/src/MentorSync.API/appsettings.json
+++ b/src/MentorSync.API/appsettings.json
@@ -34,5 +34,5 @@
         "Database": "mentorsync-outbox",
         "Collection": "outboxMessages"
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "http://localhost:51392"
 }
