--- a/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
+++ b/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.3.0" />
+        <PackageReference Include="Bogus" Version="35.6.3" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
         <PackageReference Include="OpenTelemetry.Api" Version="1.12.0" />
     </ItemGroup>
