--- a/src/MentorSync.UI/package.json
+++ b/src/MentorSync.UI/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@microsoft/signalr": "^8.0.7",
         "@tailwindcss/vite": "^4.1.7",
         "@types/marked": "^5.0.2",
         "@types/node": "^22.15.21",
