--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,17 +1,13 @@
 version: 2
 updates:
-  # Enable version updates for NuGet (for BE and Aspire)
+  # Enable version updates for BE and Aspire
   - package-ecosystem: "nuget"
-    # Look for NuGet dependency info from the `root` directory
     directory: "/"
-    # Check the NuGet registry for updates every day (weekdays)
     schedule:
-      interval: "daily"
+      interval: "weekly"
 
-  # Enable version updates for npm (for UI)
+  # Enable version updates for UI
   - package-ecosystem: "npm"
-    # Look for dependency info from the `root` directory
     directory: "/src/MentorSync.UI"
-    # Check the NuGet registry for updates every day (weekdays)
     schedule:
-      interval: "daily"
+      interval: "weekly"
