introduced packages caching in CI workflows

--- a/aspire/MentorSync.ServiceDefaults/MentorSync.ServiceDefaults.csproj
+++ b/aspire/MentorSync.ServiceDefaults/MentorSync.ServiceDefaults.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <IsAspireSharedProject>true</IsAspireSharedProject>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
     <ItemGroup>
