--- a/src/Modules/Users/MentorSync.Users.Contracts/MentorSync.Users.Contracts.csproj
+++ b/src/Modules/Users/MentorSync.Users.Contracts/MentorSync.Users.Contracts.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" />
