--- a/.github/workflows/ui-build-and-test.yml
+++ b/.github/workflows/ui-build-and-test.yml
@@ -24,9 +24,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
+          cache: "npm"
+          cache-dependency-path: src/MentorSync.UI/package-lock.json
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build project
         run: npm run build
