--- a/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
+++ b/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
@@ -8,6 +8,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>dc0fc8e3-3a05-42e5-bc00-c18ccb8b4bd0</UserSecretsId>
         <IsAspireProject>true</IsAspireProject>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
     <ItemGroup>
