--- a/src/MentorSync.SharedKernel/MentorSync.SharedKernel.csproj
+++ b/src/MentorSync.SharedKernel/MentorSync.SharedKernel.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Ardalis.Result" Version="10.1.0" />
