--- a/src/Modules/Recommendations/MentorSync.Recommendations/MentorSync.Recommendations.csproj
+++ b/src/Modules/Recommendations/MentorSync.Recommendations/MentorSync.Recommendations.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
