--- a/src/Modules/Scheduling/MentorSync.Scheduling.Contracts/MentorSync.Scheduling.Contracts.csproj
+++ b/src/Modules/Scheduling/MentorSync.Scheduling.Contracts/MentorSync.Scheduling.Contracts.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <ItemGroup>
