introduced messaging functionality

--- a/src/MentorSync.API/appsettings.json
+++ b/src/MentorSync.API/appsettings.json
@@ -32,7 +32,9 @@
     },
     "MongoSettings": {
         "Database": "mentorsync-outbox",
-        "Collection": "outboxMessages"
+        "OutboxCollection": "outboxMessages",
+        "RoomsCollection": "chatRooms",
+        "MessagesCollection": "chatMessages"
     },
     "AllowedHosts": "http://localhost:51392"
 }
