--- a/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
+++ b/aspire/MentorSync.AppHost/MentorSync.AppHost.csproj
@@ -18,7 +18,8 @@
         <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.3.1" />
         <PackageReference Include="Aspire.Hosting.MongoDB" Version="9.3.1" />
         <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.3.1" />
-        <PackageReference Include="CommunityToolkit.Aspire.Hosting.NodeJS.Extensions" Version="9.5.0" />
+        <PackageReference Include="CommunityToolkit.Aspire.Hosting.NodeJS.Extensions" Version="9.6.0" />
+        <PackageReference Include="System.Text.Json" Version="9.0.7" />
     </ItemGroup>
 
     <ItemGroup>
