--- a/aspire/MentorSync.ServiceDefaults/MentorSync.ServiceDefaults.csproj
+++ b/aspire/MentorSync.ServiceDefaults/MentorSync.ServiceDefaults.csproj
@@ -10,7 +10,7 @@
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
 
-        <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.6.0" />
+        <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.7.0" />
         <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.3.1" />
         <PackageReference Include="Npgsql.OpenTelemetry" Version="9.0.3" />
         <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
@@ -20,6 +20,7 @@
         <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.11.0-beta.2" />
         <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
         <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0" />
+        <PackageReference Include="System.Text.Json" Version="9.0.7" />
     </ItemGroup>
 
 </Project>
