--- a/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
+++ b/src/MentorSync.MigrationService/MentorSync.MigrationService.csproj
@@ -10,9 +10,10 @@
     <ItemGroup>
         <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.3.1" />
         <PackageReference Include="Bogus" Version="35.6.3" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.1" />
         <PackageReference Include="OpenTelemetry.Api" Version="1.12.0" />
+        <PackageReference Include="System.Text.Json" Version="9.0.7" />
     </ItemGroup>
 
     <ItemGroup>
