--- a/src/Modules/Materials/MentorSync.Materials.Contracts/MentorSync.Materials.Contracts.csproj
+++ b/src/Modules/Materials/MentorSync.Materials.Contracts/MentorSync.Materials.Contracts.csproj
@@ -1,14 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
-    <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-    <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
-    <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
+    
+    
+    
+    
   </ItemGroup>
 
 </Project>
