--- a/src/Modules/Ratings/MentorSync.Ratings.Contracts/MentorSync.Ratings.Contracts.csproj
+++ b/src/Modules/Ratings/MentorSync.Ratings.Contracts/MentorSync.Ratings.Contracts.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -11,10 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
-    <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-    <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
-    <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
+    
+    
+    
+    
   </ItemGroup>
 
 </Project>
