--- a/src/Modules/Users/MentorSync.Users.Contracts/MentorSync.Users.Contracts.csproj
+++ b/src/Modules/Users/MentorSync.Users.Contracts/MentorSync.Users.Contracts.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -8,9 +8,9 @@
     <ProjectReference Include="..\..\..\MentorSync.SharedKernel\MentorSync.SharedKernel.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="Meziantou.Analyzer" Version="2.0.210" />
-    <PackageReference Update="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" />
-    <PackageReference Update="Roslynator.Analyzers" Version="4.14.0" />
-    <PackageReference Update="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
+    
+    
+    
+    
   </ItemGroup>
 </Project>
